# claude-arsenal

./: .gitignore  CONTRIBUTING.md  README.md  README_CN.md  SECURITY.md  install.sh
.github/: pull_request_template.md
agents/: .gitkeep  backend-typescript-architect.md  code-archaeologist.md  kubernetes-specialist.md  opensource-contributor.md  security-auditor.md  senior-code-reviewer.md  tech-lead-orchestrator.md
claude-md/: .gitkeep  rust-project.md
commands/: .gitkeep
docs/: agents-analysis.md  creating-plugins.md  installation.md  product-lifecycle-skills-en.md  product-lifecycle-skills-zh.md  skill-designs.md  skill-optimization-report.md  skill-registry.md  skill-test-report.md  skill-testing-guide.md  skills-agents-analysis.md
hooks/: .gitkeep
learn/: product-manager-responsibilities.md  software-architect-responsibilities.md
registry/: skills.json  tag_overrides.yml  tags.json
skills/: .gitkeep  (+14 more)
skills/python-project/templates/api/: .env.example  Makefile  pyproject.toml
skills/python-project/templates/api/src/myapp/: __init__.py  __main__.py  config.py  main.py
skills/python-project/templates/api/src/myapp/api/: deps.py  middleware.py
skills/python-project/templates/api/src/myapp/api/routes/: __init__.py  user.py
skills/python-project/templates/api/src/myapp/core/: __init__.py  exceptions.py  logging.py
skills/python-project/templates/api/src/myapp/models/: __init__.py  user.py
skills/python-project/templates/api/src/myapp/services/: __init__.py  user.py
skills/python-project/templates/api/tests/: conftest.py  test_user.py
skills/rust-project/templates/cli/: Cargo.toml
skills/rust-project/templates/cli/src/: error.rs  main.rs
skills/rust-project/templates/cli/src/commands/: mod.rs  process.rs
skills/rust-project/templates/web-service/: .env.example  Cargo.toml  Makefile
skills/rust-project/templates/web-service/config/: default.toml
skills/rust-project/templates/web-service/migrations/: 001_init.sql
skills/rust-project/templates/web-service/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  router.rs
skills/rust-project/templates/web-service/src/handlers/: health.rs  user.rs
skills/rust-project/templates/web-service/src/models/: user.rs
skills/rust-project/templates/web-service/src/services/: user.rs
(+115 files in other folders)
